Correction mobile + ajout progress bar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,7 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 150px;
+    padding: 80px 0;
 
     @media screen and (max-width: $breakpoint-desktop) {
         flex-direction: column;
@@ -28,8 +29,6 @@ h1 {
     }
 
     @media screen and (max-width: $breakpoint-600) {
-        app-task-list {
-            width: 80%;
-        }
+        padding: 0 0;
     }
 }
