--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -2,7 +2,6 @@
 
 .container-list {
     background-color: $background-grey;
-    margin-top: 80px;
     padding: 0 50px;
     border-radius: 5px;
     width: 500px;
@@ -10,10 +9,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 
     @media screen and (max-width: $breakpoint-600) {
-        width: 100%;
-        margin-top: 40px;
+        width: 80%;
+        margin: 40px auto 0;
         padding: 0 10px;
     }
 
@@ -21,7 +21,12 @@
         font-family: 'Outfit';
         font-weight: $text-medium;
         font-size: 48px;
-        margin-bottom: 0;
+        text-align: center;
+        margin: 25px 0 0 0;
+
+        &.completed {
+            color: $green-validate;
+        }
     }
 
     .container-task-info {
@@ -130,5 +135,15 @@
                 border: 1px solid $white;
             }
         }
+    }
+
+    .progress-bar {
+        height: 5px;
+        background-color: #06d6a0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 3px;
+        transition: width .3s ease;
     }
 }
