--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,13 +5,8 @@
     src: url('./assets/fonts/outfit.ttf');
 }
 
-html {
-    height: 100%;
-}
-
 body {
     background: linear-gradient($black, $gradient-black, $black);
-    height: 100%;
     margin: 0;
 }
 
